# game-ui-engines

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: FindSFML.cmake
data/json/: level_1.json  level_2.json  original_level_1.json
data/xml/: users.xml
src/: CMakeLists.txt  bubble_sort_algorithm_test  find_algorithm_test  main.cpp  main_old.cpp  mario.cpp
src/Constants/: Constants.cpp  Constants.h
src/DataTypes/: index.h
src/DataTypes/Exception/: Exception.cpp  Exception.h
src/DataTypes/ExtendedRange/: ExtendedRange.cpp  ExtendedRange.h
src/DataTypes/File/: File.cpp  File.h
src/DataTypes/File/FileReader/: FileReader.cpp  FileReader.h
src/DataTypes/File/FileWriter/: FileWriter.cpp  FileWriter.h
src/DataTypes/Range/: Range.cpp  Range.h
src/DataTypes/Time/: Time.cpp  Time.h
src/Engine/: Engine.cpp  Engine.h  index.h
src/Engine/Controllers/CallSchedulerController/: CallSchedulerController.cpp  CallSchedulerController.h
src/Engine/Controllers/CallSchedulerController/SchedulerPlan/: SchedulerPlan.cpp  SchedulerPlan.h
src/Engine/Controllers/FocusController/: FocusController.cpp  FocusController.h
src/Engine/Controllers/StrategiesController/: StrategiesController.cpp  StrategiesController.h
src/Engine/DataUtils/MousePosition/: MousePosition.cpp  MousePosition.h
src/Engine/Form/: Form.cpp  Form.h  index.h
src/Engine/Form/Controllers/FocusController/: FocusController.cpp  FocusController.h
src/Engine/Form/ExtendedTypes/ActionElement/: ActionElement.cpp  ActionElement.h
src/Engine/Form/ExtendedTypes/FocusElement/: FocusElement.h
src/Engine/Form/Objects/ActionObject/: ActionObject.cpp  ActionObject.h
src/Engine/Form/Objects/FocusObject/: FocusObject.cpp  FocusObject.h
src/Engine/Form/Templates/ErrorForm/: ErrorForm.cpp  ErrorForm.h
src/Engine/Form/Types/Button/: Button.cpp  Button.h
src/Engine/Form/Types/Element/: Element.cpp  Element.h
src/Engine/Form/Types/ProgressBar/: ProgressBar.cpp  ProgressBar.h
src/Engine/Form/Types/Text/: Text.cpp  Text.h
src/Engine/Form/Types/TextBox/: TextBox.cpp  TextBox.h
src/Engine/GameMap/: GameMap.cpp  GameMap.h
src/Engine/Player/: Player.cpp  Player.h
src/Engine/User/: User.cpp
src/Exception/: Exception.cpp  Exception.h
src/File/: File.cpp  File.h
src/File/FileReader/: FileReader.cpp  FileReader.h
src/File/FileWriter/: FileWriter.cpp  FileWriter.h
src/Game/: Game.cpp  Game.h
src/Game/Form/: Form.cpp  Form.h
src/Game/Form/Templates/ErrorForm/: ErrorForm.cpp  ErrorForm.h
src/Game/Form/Types/Button/: Button.cpp  Button.h
src/Game/Form/Types/ProgressBar/: ProgressBar.cpp
src/Game/Form/Types/Text/: Text.h
src/Game/Forms/Error/: ErrorForm.cpp  ErrorForm.h
src/Game/Interface/: Interface.cpp  Interface.h
src/Game/Interface/Templates/ProgressBar/: ProgressBar.h
src/Game/Interface/Types/Button/: Button.cpp  Button.h
src/Game/Interface/Types/Element/: Element.cpp  Element.h
src/Game/Interface/Types/ProgressBar/: ProgressBar.h
src/Game/Interface/Types/Text/: Text.cpp  Text.h
src/Game/User/: User.h
src/Logger/: Logger.cpp  Logger.h
src/Time/: Time.cpp  Time.h
src/algorithm_tests/: bubble_sort.cpp  find.cpp
src/classes/Object/: Object.cpp  Object.h
src/deprecated/Game/Interface/Types/Button/: Button.cpp  Button.h
src/deprecated/Game/Interface/Types/Element/: Element.cpp  Element.h
src/utils/: array.cpp  array.h  index.h  string.cpp  string.h
src/utils/array/: array.cpp  array.h
src/utils/string/: string.cpp  string.h
src/utils/time/: time.cpp  time.h
